# aoc-rust

./: .gitignore  Cargo.toml  bacon.toml
.github/workflows/: rust.yml
.tangled/workflows/: rust.yml
aoc_2017/: Cargo.toml
aoc_2017/proptest-regressions/: day16.txt
aoc_2017/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
aoc_2020/: Cargo.toml
aoc_2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  main.rs
aoc_2022/: Cargo.toml
aoc_2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
aoc_2024/: Cargo.toml
aoc_2024/proptest-regressions/: day09.txt
aoc_2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
aoc_2025/: Cargo.toml
aoc_2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
aoc_companion/: Cargo.toml
aoc_companion/src/: cli.rs  door.rs  lib.rs  output.rs  runtime.rs  validation.rs
aoc_companion/src/api/: mod.rs  response.rs
aoc_companion/src/api/client/: cache.rs  fs.rs  mod.rs  web.rs
aoc_companion/src/api/data/answer/: correct_part1.html  correct_part2.html  fictitious_message.html  guessed_too_recently.html  incorrect_non_number.html  incorrect_too_high.html  incorrect_too_low.html  incorrect_too_many_guesses.html
aoc_companion/src/api/data/day/: fully_solved.html  fully_solved_with_oneline_input.html  partially_solved.html  partially_solved_with_oneline_input.html  unauthenticated.html  unsolved.html  unsolved_with_oneline_input.html
aoc_utils/: Cargo.toml
aoc_utils/proptest-regressions/: wrap.txt
aoc_utils/src/: array.rs  cache.rs  geometry.rs  iter.rs  lib.rs  linalg.rs  range.rs  wrap.rs
