[workspace]
resolver = "2"
members = [
    "aoc_companion",
    "aoc_utils",
    "aoc_2017",
    "aoc_2020",
    "aoc_2022",
    "aoc_2024",
]

[workspace.dependencies]
aoc_companion = { path = "aoc_companion" }
aoc_utils = { path = "aoc_utils" }
anyhow = "1.0.89"
assert_matches = "1.5.0"
enum-map = "2.7.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
ndarray = "0.16.1"
proptest = { version = "1.5.0", default-features = false, features = ["std"] }
rayon = "1.10.0"
regex = "1.11.0"
rstest = "0.23.0"
tap = "1.0.1"
thiserror = "1.0.64"
tokio = "1.40.0"
