[workspace]
resolver = "2"
members = [
    "aoc_companion",
    "aoc_utils",
    "aoc_2017",
    "aoc_2020",
    "aoc_2022",
    "aoc_2024",
]

[workspace.dependencies]
aoc_companion = { path = "aoc_companion" }
aoc_utils = { path = "aoc_utils" }
anyhow = "1.0.100"
assert_matches = "1.5.0"
enum-map = "2.7.3"
itertools = "0.14.0"
ndarray = "0.17.1"
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
rayon = "1.11.0"
regex = "1.12.2"
rstest = "0.26.1"
tap = "1.0.1"
thiserror = "2.0.17"
tokio = "1.48.0"
