[package]
name = "aoc_2017"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
assert_matches = "1.5.0"
itertools = { workspace = true }
regex = "1.6.0"
rstest = "0.15.0"
tap = "1.0.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
