[package]
name = "aoc_2017"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
assert_matches = { workspace = true }
itertools = { workspace = true }
proptest = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-test = "0.2.5"
