[package]
name = "aoc_2017"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
anyhow = { workspace = true }
assert_matches = { workspace = true }
enum-map = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1.40"
tracing-test = "0.2.5"
primes = "0.4.0"

[dev-dependencies]
proptest = { workspace = true }
