[package]
name = "aoc_2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

