[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
assert_matches = { workspace = true }
genawaiter = "0.99.1"
itertools = { workspace = true }
ndarray = "0.15.6"
regex = { workspace = true }
rstest = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
