[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
anyhow = { workspace = true }
assert_matches = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
