[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_companion = { workspace = true }
aoc_utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
