[package]
name = "aoc_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
assert_matches = { workspace = true }
async-trait = "0.1.57"
clap = { version = "4.0.19", features = ["derive"] }
itertools = { workspace = true }
reqwest = { version = "0.11.12", features = ["cookies"] }
scraper = "0.13.0"
selectors = "0.23.0"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
termion = "1.5.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
