[package]
name = "aoc_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
assert_matches = { workspace = true }
async-trait = "0.1.83"
clap = { version = "4.5.18", features = ["derive"] }
itertools = { workspace = true }
rayon = { workspace = true }
reqwest = { version = "0.12.7", features = ["cookies"] }
scraper = "0.20.0"
selectors = "0.25.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
termion = "4.0.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
