[package]
name = "aoc_companion"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
itertools = { workspace = true }
rayon = { workspace = true }
reqwest = { version = "0.12.24", features = ["cookies"] }
scraper = "0.24.0"
selectors = "0.33.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
termion = "4.0.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs"] }
