[package]
name = "aoc_utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = "0.2.19"
paste = "1.0.15"
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
